babelify tests, edited swagger YAML to add endpoints for put,post and delete on person
