# api/controllers/Person.js
@@ -1,5 +1,6 @@
 import util from 'util';
 import {getPersonById} from '../services/Person';
+import {serialize} from 'class-transformer';
 /*
 
  For a controller you should export the functions referenced in your Swagger document by name.
@@ -22,7 +23,17 @@ import {getPersonById} from '../services/Person';
  const getPerson=(req, res)=>{
   // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
   var personId = req.swagger.params.personId.value;
-  res.json(getPersonById(personId));
+  getPersonById(personId)
+    .then(person => {
+      if (person) {
+        res.status(200).json(serialize(person));
+      } else {
+        res.status(404).send({"message":"Person not found"});
+      }
+  })
+  .catch((err) => {
+    res.status(500).send({"message":err});
+  });
 }
 
 export {getPerson};
